// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginWithPhoneNumber should always render recaptcha 1`] = `
<div>
  <Recaptcha />
</div>
`;

exports[`LoginWithPhoneNumber should render correctly when showCodeForm is true 1`] = `
<div>
  <Form
    model="forms.phoneNumberLogin"
    onSubmit={[Function]}
  >
    <text
      model=".code"
      placeholder="Enter SMS code"
    />
    <withStyles(Button)
      type="submit"
    >
      Submit
    </withStyles(Button)>
  </Form>
  <Recaptcha />
</div>
`;

exports[`LoginWithPhoneNumber should render correctly when showError is true 1`] = `
<div>
  <span>
    something went wrong
  </span>
  <Recaptcha />
</div>
`;

exports[`LoginWithPhoneNumber should render correctly when showLoading is true 1`] = `
<div>
  <span>
    loading
  </span>
  <Recaptcha />
</div>
`;

exports[`LoginWithPhoneNumber should render correctly when showPhoneNumberForm is true 1`] = `
<div>
  <Form
    model="forms.phoneNumberLogin"
    onSubmit={[Function]}
  >
    <text
      component={[Function]}
      defaultCountry="cy"
      model=".phoneNumber"
      placeholder="Enter phone number"
      validators={
        Object {
          "required": [Function],
        }
      }
    />
    <withStyles(Button)
      type="submit"
    >
      Sign in with phone number
    </withStyles(Button)>
  </Form>
  <Recaptcha />
</div>
`;

exports[`LoginWithPhoneNumber should render correctly when showTryAgain is true 1`] = `
<div>
  <a
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  >
    Try again
  </a>
  <Recaptcha />
</div>
`;
